--- a/index copy.html
+++ b/index copy.html
@@ -2358,7 +2358,7 @@
       <form class="cta-form" id="demo-form" action="https://formsubmit.co/anish@birthmodel.com" method="POST">
         <input type="hidden" name="_subject" value="Birth Model Demo Request">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="thank-you.html?type=demo">
+        <input type="hidden" name="_next" value="https://birthmodel.com/thank-you.html?type=demo">
         <input type="email" class="cta-email-input" name="email" placeholder="Email address" required>
         <button type="submit" class="cta-submit-btn">Get a demo</button>
       </form>
@@ -2421,7 +2421,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
           <a href="careers.html">Careers</a>
         </div>
       </div>
