--- a/blog-global-payments.html
+++ b/blog-global-payments.html
@@ -264,7 +264,17 @@
     .footer-legal a { color: rgba(255,255,255,0.6); text-decoration: none; }
     .footer-badges { display: flex; gap: 12px; }
     .footer-badge { display: flex; align-items: center; gap: 6px; padding: 10px 16px; background: rgba(255,255,255,0.08); border-radius: 8px; font-size: 12px; font-weight: 700; }
-    .footer-badge .check { color: #4ade80; }
+    .footer-badge .check {
+      color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
     
     @media (max-width: 768px) {
       .nav-links { display: none; }
