--- a/blog-handoff-burnout.html
+++ b/blog-handoff-burnout.html
@@ -274,7 +274,17 @@
     .footer-legal a { color: rgba(255,255,255,0.6); text-decoration: none; }
     .footer-badges { display: flex; gap: 12px; }
     .footer-badge { display: flex; align-items: center; gap: 6px; padding: 10px 16px; background: rgba(255,255,255,0.08); border-radius: 8px; font-size: 12px; font-weight: 700; }
-    .footer-badge .check { color: #4ade80; }
+    .footer-badge .check {
+      color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
 
     @media (max-width: 768px) {
       .nav-links { display: none; }
@@ -548,7 +558,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
     <a href="careers.html">Careers</a>
         </div>
       </div>
