--- a/careers.html
+++ b/careers.html
@@ -762,7 +762,17 @@
       transition: all 0.2s ease;
     }
     .footer-badge:hover { background: rgba(255,255,255,0.12); }
-    .footer-badge .check { color: #4ade80; }
+    .footer-badge .check {
+      color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
     
     /* Responsive */
     @media (max-width: 1024px) {
@@ -1246,7 +1256,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
     <a href="careers.html">Careers</a>
         </div>
       </div>
