--- a/demo.html
+++ b/demo.html
@@ -328,6 +328,14 @@
     .footer-badge .check {
       color: #4ade80;
     }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
 
     /* Success Overlay */
     .success-overlay {
@@ -590,7 +598,7 @@
         <form id="demo-form" action="https://formsubmit.co/anish@birthmodel.com" method="POST">
           <input type="hidden" name="_subject" value="Birth Model Demo Request">
           <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_next" value="thank-you.html?type=demo">
+          <input type="hidden" name="_next" value="https://birthmodel.com/thank-you.html?type=demo">
           <input type="hidden" name="_template" value="table">
           <div class="form-row">
             <div class="form-group">
