--- a/implementation.html
+++ b/implementation.html
@@ -476,7 +476,17 @@
       padding: 8px 14px;
       border-radius: 20px;
     }
-    .footer-badge .check { color: #4ade80; }
+    .footer-badge .check {
+      color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
 
     @media (max-width: 900px) {
       .doc-layout {
@@ -939,7 +949,7 @@
 
         <h3>Need Help?</h3>
         <p>Contact Birth Model support for enterprise deployment guidance:</p>
-        <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com">support@birthmodel.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a></p>
       </section>
     </main>
   </div>
@@ -995,7 +1005,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
           <a href="careers.html">Careers</a>
         </div>
       </div>
