--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -228,7 +228,17 @@
       padding: 8px 14px;
       border-radius: 20px;
     }
-    .footer-badge .check { color: #4ade80; }
+    .footer-badge .check {
+      color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
 
     @media (max-width: 900px) {
       
@@ -394,14 +404,14 @@
     </ul>
 
     <h2>Data Access Requests</h2>
-    <p>To exercise your data access rights, please submit a request through our <a href="mailto:support@birthmodel.com">data subject access form</a> or contact us at <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>.</p>
+    <p>To exercise your data access rights, please submit a request through our <a href="mailto:support@birthmodel.com">data subject access form</a> or contact us at <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>.</p>
 
     <h2>Policy Updates</h2>
     <p>We reserve the right to modify this privacy policy at any time. We will notify users of material changes through our website or direct communication. Your continued use of our services after such modifications constitutes acceptance of the updated policy.</p>
 
     <h2>Contact Us</h2>
     <p>If you have questions or concerns about this privacy policy, please contact us:</p>
-    <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com">support@birthmodel.com</a></p>
+    <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a></p>
     <p><strong>Company:</strong> Birth Model, Inc.</p>
   </div>
 
@@ -456,7 +466,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
     <a href="careers.html">Careers</a>
         </div>
       </div>
