--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -320,6 +320,14 @@
     .footer-badge .check {
       color: #4ade80;
     }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+    }
 
     /* Mobile Responsive */
     @media (max-width: 1024px) {
@@ -440,9 +448,14 @@
         <a href="https://provider.birthmodel.com" class="nav-login" target="_blank">Clinician Login</a>
         <a href="demo.html" class="nav-cta">Schedule Demo</a>
       </div>
+      <div class="nav-hamburger" onclick="toggleMobileMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
     </div>
   </nav>
-  
+
   <!-- Mobile Menu -->
   <div class="mobile-menu" id="mobile-menu">
     <a href="index.html">Home</a>
