--- a/solutions-clinicians.html
+++ b/solutions-clinicians.html
@@ -186,9 +186,18 @@
       font-weight: 600;
     }
     @media (max-width: 768px) {
-      .quote-section { padding: 30px 20px; }
-      .quote-mark { font-size: 36px; }
-      .quote-text { font-size: 15px; }
+      .quote-section { padding: 20px 16px; }
+      .quote-mark { font-size: 32px; }
+      .quote-text { font-size: 14px; }
+      /* Condense left side text for mobile */
+      .feature-content h2 { font-size: 22px; margin-bottom: 12px; }
+      .feature-content p { font-size: 13px; margin-bottom: 16px; line-height: 1.5; }
+      .feature-list li { font-size: 11px; padding: 4px 0; }
+      .handoff-content h2 { font-size: 22px; margin-bottom: 12px; }
+      .handoff-content p { font-size: 13px; margin-bottom: 16px; line-height: 1.5; }
+      /* Reduce section spacing */
+      .benefits-section { padding: 40px 16px; }
+      .mobile-section { padding: 40px 16px; }
     }
     
     /* Benefits Grid */
@@ -287,7 +296,7 @@
     }
     @media (max-width: 768px) {
       .mobile-section {
-        padding: 60px 20px;
+        padding: 30px 16px;
       }
     }
     /* iPhone 17 Frame */
@@ -638,6 +647,14 @@
     }
     .footer-badge .check {
       color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
     }
   </style>
 </head>
@@ -2822,7 +2839,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
     <a href="careers.html">Careers</a>
         </div>
       </div>
