--- a/solutions-hospitals.html
+++ b/solutions-hospitals.html
@@ -220,8 +220,17 @@
       .solution-inner { max-width: 100%; }
     }
     @media (max-width: 768px) {
-      .solution-section { padding: 40px 20px; }
-      .page-hero { padding: 120px 20px 50px; }
+      .solution-section { padding: 30px 16px; }
+      .page-hero { padding: 100px 16px 40px; }
+      /* Condense left side text for mobile */
+      .solution-content h2 { font-size: 22px; margin-bottom: 12px; }
+      .solution-content p { font-size: 13px; margin-bottom: 16px; line-height: 1.5; }
+      .solution-list li { font-size: 11px; padding: 4px 0; gap: 6px; }
+      .solution-list .icon { font-size: 10px; }
+      .solution-label { font-size: 10px; margin-bottom: 10px; }
+      /* Reduce section spacing */
+      .stats-section { padding: 40px 16px; }
+      .pillars-section { padding: 40px 16px; }
     }
     .solution-label {
       font-size: 11px;
@@ -444,6 +453,14 @@
     }
     .footer-badge .check {
       color: #4ade80;
+    }
+    /* Mobile footer adjustments */
+    @media (max-width: 768px) {
+      .footer-email-link { display: none; }
+      .footer-bottom { flex-direction: column; gap: 12px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
+      .footer-badges { gap: 8px; }
+      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
     }
   </style>
 </head>
@@ -2914,7 +2931,7 @@
           <h4>Contact</h4>
           <a href="demo.html">Request Demo</a>
           <a href="https://calendly.com/birthmodel" target="_blank">Schedule Meeting</a>
-          <a href="mailto:support@birthmodel.com">support@birthmodel.com</a>
+          <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a>
     <a href="careers.html">Careers</a>
         </div>
       </div>
