--- a/solutions-hospitals.html
+++ b/solutions-hospitals.html
@@ -552,9 +552,12 @@
       /* Hide pillar descriptions on mobile portrait */
       @media (max-width: 1024px) {
         .pillar-desc { display: none; }
-        .pillar-card { padding: 16px 12px; }
-        .pillar-icon { width: 40px; height: 40px; font-size: 18px; margin-bottom: 10px; }
-        .pillar-title { font-size: 11px; margin-bottom: 0; }
+        .pillar-card { padding: 16px 12px; text-align: center; }
+        .pillar-icon { width: 40px; height: 40px; font-size: 18px; margin-bottom: 10px; margin-left: auto; margin-right: auto; }
+        .pillar-title { font-size: 11px; margin-bottom: 0; text-align: center; }
+        .pillars-header { text-align: center; }
+        .pillars-header h2 { font-size: 24px; }
+        .pillars-header p { font-size: 14px; }
       }
 
       .reportables-card {
@@ -1387,20 +1390,37 @@
         }
       }
 
-      // Throttled scroll
-      let ticking = false;
-      window.addEventListener('scroll', () => {
-        if (!ticking) {
-          requestAnimationFrame(() => {
-            handleScroll();
-            ticking = false;
-          });
-          ticking = true;
-        }
-      }, { passive: true });
+      // Check if mobile
+      const isMobile = window.innerWidth <= 768;
 
-      // Initial check
-      handleScroll();
+      if (isMobile) {
+        // Mobile: Auto-cycle through steps
+        let mobileStep = 1;
+        function autoCycleSteps() {
+          currentStep = mobileStep;
+          updateStepIndicators();
+          updateMockupState();
+          if (progressFill) progressFill.style.width = ((mobileStep / 4) * 100) + '%';
+          mobileStep = mobileStep >= 4 ? 1 : mobileStep + 1;
+        }
+        autoCycleSteps(); // Initial
+        setInterval(autoCycleSteps, 2500);
+      } else {
+        // Desktop: Throttled scroll
+        let ticking = false;
+        window.addEventListener('scroll', () => {
+          if (!ticking) {
+            requestAnimationFrame(() => {
+              handleScroll();
+              ticking = false;
+            });
+            ticking = true;
+          }
+        }, { passive: true });
+
+        // Initial check
+        handleScroll();
+      }
     });
   </script>
 
@@ -1968,18 +1988,35 @@
           }
         }
 
-        let ticking = false;
-        window.addEventListener('scroll', () => {
-          if (!ticking) {
-            requestAnimationFrame(() => {
-              handleScroll();
-              ticking = false;
-            });
-            ticking = true;
-          }
-        }, { passive: true });
+        // Check if mobile
+        const isMobile = window.innerWidth <= 768;
 
-        handleScroll();
+        if (isMobile) {
+          // Mobile: Auto-cycle through steps
+          let mobileStep = 1;
+          function autoCycleSteps() {
+            currentStep = mobileStep;
+            updateStepIndicators();
+            updateMockupState();
+            if (progressFill) progressFill.style.width = ((mobileStep / 4) * 100) + '%';
+            mobileStep = mobileStep >= 4 ? 1 : mobileStep + 1;
+          }
+          autoCycleSteps();
+          setInterval(autoCycleSteps, 2500);
+        } else {
+          let ticking = false;
+          window.addEventListener('scroll', () => {
+            if (!ticking) {
+              requestAnimationFrame(() => {
+                handleScroll();
+                ticking = false;
+              });
+              ticking = true;
+            }
+          }, { passive: true });
+
+          handleScroll();
+        }
       });
     </script>
   </section>
@@ -2560,18 +2597,35 @@
           }
         }
 
-        let ticking = false;
-        window.addEventListener('scroll', () => {
-          if (!ticking) {
-            requestAnimationFrame(() => {
-              handleScroll();
-              ticking = false;
-            });
-            ticking = true;
-          }
-        }, { passive: true });
+        // Check if mobile
+        const isMobile = window.innerWidth <= 768;
 
-        handleScroll();
+        if (isMobile) {
+          // Mobile: Auto-cycle through steps
+          let mobileStep = 1;
+          function autoCycleSteps() {
+            currentStep = mobileStep;
+            updateStepIndicators();
+            updateMockupState();
+            if (progressFill) progressFill.style.width = ((mobileStep / 4) * 100) + '%';
+            mobileStep = mobileStep >= 4 ? 1 : mobileStep + 1;
+          }
+          autoCycleSteps();
+          setInterval(autoCycleSteps, 2500);
+        } else {
+          let ticking = false;
+          window.addEventListener('scroll', () => {
+            if (!ticking) {
+              requestAnimationFrame(() => {
+                handleScroll();
+                ticking = false;
+              });
+              ticking = true;
+            }
+          }, { passive: true });
+
+          handleScroll();
+        }
       });
     </script>
   </section>
@@ -2632,7 +2686,22 @@
           transform: scale(0.65);
         }
       }
-      
+
+      /* Mobile-specific fixes for revenue/diagnosis section */
+      @media (max-width: 768px) {
+        .revenue-section .solution-inner > div[style*="grid"] {
+          display: flex !important;
+          flex-direction: column !important;
+          gap: 30px !important;
+        }
+        .diagnosis-preview {
+          transform: scale(0.9) !important;
+          transform-origin: top center !important;
+          margin: 0 auto;
+          max-width: 100%;
+        }
+      }
+
       @keyframes dx-pulse {
         0%, 100% { opacity: 1; box-shadow: 0 0 0 0 rgba(102, 209, 193, 0.4); }
         50% { opacity: 0.8; box-shadow: 0 0 0 4px rgba(102, 209, 193, 0); }
@@ -3068,7 +3137,7 @@
         const isTablet = (screenWidth >= 768 && screenWidth <= 1366) ||
                          (screenHeight >= 768 && screenHeight <= 1366);
         if (isTablet && viewportMeta) {
-          viewportMeta.setAttribute('content', 'width=device-width, initial-scale=0.75, minimum-scale=0.75');
+          viewportMeta.setAttribute('content', 'width=device-width, initial-scale=0.85, minimum-scale=0.85');
         }
       })();
 
