--- a/index.html
+++ b/index.html
@@ -1675,17 +1675,36 @@
       .section-title { font-size: 28px; }
       .cta-title { font-size: 28px; }
             .cta-email-input { text-align: center; }
+      /* Mobile stats bar */
+      .stats-bar { padding: 30px 20px; }
+      .stats-inner { gap: 12px; }
+      .stat-item { padding: 16px 10px; }
+      .stat-value { font-size: 28px; }
+      .stat-label { font-size: 10px; }
+      /* Mobile integration section */
+      .integration-section { padding: 50px 20px; }
+      .section-header { margin-bottom: 30px; }
+      .section-label { font-size: 11px; margin-bottom: 8px; }
+      .section-title { font-size: 24px; }
+      .section-subtitle { font-size: 13px; }
       /* Mobile footer adjustments */
       .footer-email-link { display: none !important; }
+      .footer-grid {
+        grid-template-columns: 1fr repeat(4, 1fr) !important;
+        gap: 12px !important;
+      }
+      .footer-col h4 { font-size: 9px !important; letter-spacing: 1px !important; margin-bottom: 12px !important; }
+      .footer-col a { font-size: 10px !important; margin-bottom: 6px !important; }
       .footer-bottom { flex-direction: column; gap: 12px; }
       .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
       .footer-badges { gap: 8px; }
       .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
-      .footer-brand { max-width: 140px; }
-      .footer-brand img { height: 24px; }
+      .footer-brand { max-width: 120px; }
+      .footer-brand img { height: 20px !important; }
+      .footer-brand p { font-size: 9px !important; }
       /* Mobile hero animation optimization */
-      .hero-inner { padding: 120px 20px 60px; gap: 30px; }
-      .epic-main-content { height: 320px; }
+      .hero-inner { padding: 120px 20px 40px; gap: 20px; }
+      .epic-main-content { height: 300px; }
       .epic-mockup { border-radius: 12px; }
       .epic-header { padding: 8px 12px; }
       .epic-body { flex-direction: column; }
