--- a/roi-calculator.html
+++ b/roi-calculator.html
@@ -323,12 +323,19 @@
     /* Mobile footer adjustments */
     @media (max-width: 1024px) {
       .footer-email-link { display: none !important; }
+      .footer-grid {
+        grid-template-columns: 1fr repeat(4, 1fr) !important;
+        gap: 12px !important;
+      }
+      .footer-col h4 { font-size: 9px !important; letter-spacing: 1px !important; margin-bottom: 12px !important; }
+      .footer-col a { font-size: 10px !important; margin-bottom: 6px !important; }
       .footer-bottom { flex-direction: column; gap: 12px; }
       .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
       .footer-badges { gap: 8px; }
       .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
-      .footer-brand { max-width: 140px; }
-      .footer-brand img { height: 24px; }
+      .footer-brand { max-width: 120px; }
+      .footer-brand img { height: 20px !important; }
+      .footer-brand p { font-size: 9px !important; }
     }
 
     /* Mobile Responsive */
