--- a/solutions-hospitals.html
+++ b/solutions-hospitals.html
@@ -3157,7 +3157,7 @@
     }
     
     document.addEventListener('DOMContentLoaded', function() {
-      // iPad/Tablet zoom adjustment - increase zoom for better handling
+      // Responsive zoom adjustment based on device
       (function() {
         const viewportMeta = document.querySelector('meta[name="viewport"]');
         const screenWidth = window.screen.width;
