--- a/solutions-clinicians.html
+++ b/solutions-clinicians.html
@@ -669,8 +669,12 @@
     .footer-badge .check {
       color: #4ade80;
     }
-    /* Mobile footer adjustments */
+    /* Mobile footer adjustments - zoom out to 75% in portrait */
     @media (max-width: 1024px) {
+      .footer {
+        transform: scale(0.75);
+        transform-origin: top center;
+      }
       .footer-email-link { display: none !important; }
       .footer-grid {
         grid-template-columns: 1fr repeat(4, 1fr) !important;
@@ -1633,17 +1637,21 @@
         const isMobile = window.innerWidth <= 768;
 
         if (isMobile) {
-          // Mobile: Auto-cycle through steps
+          // Mobile: Initialize cards first, then auto-cycle through steps
+          initializeCards();
           let mobileStep = 1;
           function autoCycleSteps() {
             currentStep = mobileStep;
             updateStepIndicators();
-            updateHandoffMockup();
+            updateCardHighlights();
             if (progressFill) progressFill.style.width = ((mobileStep / 3) * 100) + '%';
             mobileStep = mobileStep >= 3 ? 1 : mobileStep + 1;
           }
-          autoCycleSteps();
-          setInterval(autoCycleSteps, 2500);
+          // Delay initial cycle to ensure cards are visible
+          setTimeout(() => {
+            autoCycleSteps();
+            setInterval(autoCycleSteps, 2500);
+          }, 500);
         } else {
           // Throttled scroll
           let ticking = false;
@@ -2976,7 +2984,7 @@
         
         <div class="footer-col">
           <h4>Platform</h4>
-          <a href="https://apps.apple.com/us/app/birth-model/id1562474693" target="_blank">Apple App Store</a>
+          <a href="https://apps.apple.com/us/app/birth-model/id6473621253" target="_blank">Apple App Store</a>
           <a href="https://play.google.com/store/apps/details?id=com.birthmodel.provider" target="_blank">Google Play</a>
           <a href="https://showroom.epic.com/Search?q=birth%20model" target="_blank">Epic Showroom</a>
           <a href="https://provider.birthmodel.com/login" target="_blank">Cloud Platform</a>
