--- a/blogs copy.html
+++ b/blogs copy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Blog — Labor & Delivery AI Insights | Birth Model</title>
   
   <!-- SEO Meta Tags -->
@@ -279,7 +279,6 @@
     <a href="blogs.html">Blog</a>
     <a href="videos.html">Videos</a>
     <a href="roi-calculator.html">ROI Calculator</a>
-          <a href="implementation.html">Mobile Implementation</a>
     <a href="implementation.html">Mobile Implementation</a>
     <a href="careers.html">Careers</a>
     <a href="https://provider.birthmodel.com" class="mobile-login" target="_blank">Clinician Login</a>
