--- a/index copy.html
+++ b/index copy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Birth Model — AI-Powered Predictive Intelligence for Labor & Delivery</title>
   
   <!-- SEO Meta Tags -->
