--- a/blog-2026-trends.html
+++ b/blog-2026-trends.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="BM_App_Icon.png">
 
   <title>2026 Maternal Health Trends: What Hospital Leaders Need to Know — Birth Model Blog</title>
