--- a/blog-nursing-staffing.html
+++ b/blog-nursing-staffing.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>The L&D Staffing Crisis: How Unpredictability Drives Nursing Turnover — Birth Model Blog</title>
 
   <!-- SEO Meta Tags -->
