--- a/disclaimer.html
+++ b/disclaimer.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Disclaimer — Birth Model</title>
 
   <meta name="description" content="Birth Model Disclaimer - Important legal information about the use of our platform and services.">
@@ -249,28 +249,28 @@
     .footer-badge .check {
       color: #4ade80;
     }
-    /* Mobile footer adjustments - zoom out to 75% in portrait */
+    /* Mobile footer - proper responsive design without scaling */
     @media (max-width: 1024px) {
       .footer {
-        transform: scale(0.85);
-        transform-origin: top center;
-        margin-bottom: -12%; /* No compensation needed - footer is last element for scale whitespace */
+        padding: 40px 12px 20px;
+        
+        
       }
       .cta-section { padding: 60px 20px; }
       .footer-email-link { display: none !important; }
       .footer-grid {
-        grid-template-columns: 1fr repeat(4, 1fr) !important;
-        gap: 12px !important;
+        grid-template-columns: 1.3fr repeat(4, 1fr) !important;
+        gap: 8px !important;
       }
-      .footer-col h4 { font-size: 9px !important; letter-spacing: 1px !important; margin-bottom: 12px !important; }
-      .footer-col a { font-size: 10px !important; margin-bottom: 6px !important; }
-      .footer-brand { max-width: 120px; }
-      .footer-brand img { height: 20px !important; }
-      .footer-brand p { font-size: 9px !important; }
-      .footer-bottom { flex-direction: column; gap: 12px; }
-      .footer-legal { flex-wrap: wrap; justify-content: center; font-size: 11px; gap: 6px; }
-      .footer-badges { gap: 8px; }
-      .footer-badge { padding: 6px 10px; font-size: 10px; gap: 4px; }
+      .footer-col h4 { font-size: 8px; letter-spacing: 1px; margin-bottom: 8px; }
+      .footer-col a { font-size: 9px; margin-bottom: 6px; line-height: 1.3; }
+      .footer-inner { max-width: 100%; }
+      .footer-brand-logo img { height: 24px; }
+      .footer-brand p { font-size: 9px; max-width: 100%; margin-bottom: 10px; }
+      .footer-bottom { flex-direction: column; align-items: center; gap: 12px; padding-top: 20px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; gap: 6px; font-size: 8px; }
+      .footer-badges { justify-content: center; gap: 8px; }
+      .footer-badge { font-size: 8px; padding: 4px 8px; }
     }
 
     @media (max-width: 900px) {
@@ -325,7 +325,6 @@
     <a href="blogs.html">Blog</a>
     <a href="videos.html">Videos</a>
     <a href="roi-calculator.html">ROI Calculator</a>
-          <a href="implementation.html">Mobile Implementation</a>
     <a href="implementation.html">Mobile Implementation</a>
     <a href="careers.html">Careers</a>
     <a href="https://provider.birthmodel.com" class="mobile-login" target="_blank">Clinician Login</a>
