--- a/end-user-license-agreement.html
+++ b/end-user-license-agreement.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=0.6, minimum-scale=0.6">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>End User License Agreement — Birth Model</title>
 
   <meta name="description" content="Birth Model End User License Agreement - Terms for using our mobile application and services.">
@@ -238,23 +238,29 @@
     .footer-badge .check {
       color: #4ade80;
     }
-    /* Mobile footer - scale to fit width */
+    /* Mobile footer - proper responsive design without scaling */
     @media (max-width: 1024px) {
       .footer {
-        transform: scale(0.85);
-        transform-origin: top center;
-        margin-bottom: -12%;
-        padding: 50px 20px 20px;
+        padding: 40px 12px 20px;
       }
       .footer-inner { max-width: 100%; }
       .footer-email-link { display: none !important; }
       .footer-grid {
-        grid-template-columns: 1.2fr repeat(4, 1fr) !important;
-        gap: 20px !important;
+        grid-template-columns: 1.3fr repeat(4, 1fr) !important;
+        gap: 8px !important;
       }
-      .footer-bottom { flex-direction: row; flex-wrap: wrap; justify-content: center; gap: 16px; }
-      .footer-legal { flex-wrap: wrap; justify-content: center; gap: 8px; }
-      .footer-badges { justify-content: center; gap: 10px; }
+      .footer-brand-logo img { height: 24px; }
+      .footer-brand p { font-size: 9px; max-width: 100%; margin-bottom: 10px; }
+      .footer-social { gap: 6px; }
+      .footer-social-icon { width: 24px; height: 24px; }
+      .footer-social-icon svg { width: 14px; height: 14px; }
+      .footer-col h4 { font-size: 8px; letter-spacing: 1px; margin-bottom: 8px; }
+      .footer-col a { font-size: 9px; margin-bottom: 6px; line-height: 1.3; }
+      .footer-bottom { flex-direction: column; align-items: center; gap: 12px; padding-top: 20px; }
+      .footer-legal { flex-wrap: wrap; justify-content: center; gap: 6px; font-size: 8px; }
+      .footer-legal span, .footer-legal a { font-size: 8px; }
+      .footer-badges { justify-content: center; gap: 8px; }
+      .footer-badge { font-size: 8px; padding: 4px 8px; }
     }
 
     @media (max-width: 600px) {
