--- a/implementation.html
+++ b/implementation.html
@@ -1045,7 +1045,7 @@
 
         <h3>Need Help?</h3>
         <p>Contact Birth Model support for enterprise deployment guidance:</p>
-        <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com" class="footer-email-link">support@birthmodel.com</a></p>
+        <p><strong>Email:</strong> <a href="mailto:support@birthmodel.com" style="color: var(--bm-coral); text-decoration: none;">support@birthmodel.com</a></p>
       </section>
     </main>
   </div>
