--- a/solutions-hospitals.html
+++ b/solutions-hospitals.html
@@ -1128,23 +1128,24 @@
                 padding: 10px !important;
                 display: block !important;
               }
-              .staff-scroll-section .solution-grid {
+              .staff-sticky-container .solution-grid {
                 display: flex !important;
                 flex-direction: column !important;
                 gap: 30px !important;
               }
-              .staff-scroll-section .solution-content {
+              .staff-sticky-container .solution-content {
                 order: 1 !important;
                 position: relative !important;
-                z-index: 1 !important;
+                z-index: 10 !important;
+                background: white !important;
               }
               .staff-mgmt-mockup {
-                transform: scale(0.75) !important;
+                transform: scale(0.7) !important;
                 transform-origin: top center !important;
                 order: 2 !important;
-                margin: 0 auto !important;
+                margin: 20px auto 0 !important;
                 position: relative !important;
-                z-index: 0 !important;
+                z-index: 1 !important;
                 max-width: 100% !important;
               }
               .staff-steps {
@@ -1751,24 +1752,24 @@
           padding: 10px !important;
           display: block !important;
         }
-        .unit-scroll-section .solution-grid,
-        .unit-sticky-container > .solution-inner > div[style*="grid"] {
+        .unit-sticky-container .solution-inner > div {
           display: flex !important;
           flex-direction: column !important;
           gap: 30px !important;
         }
-        .unit-scroll-section .solution-content {
+        .unit-sticky-container .solution-content {
           order: 1 !important;
           position: relative !important;
-          z-index: 1 !important;
+          z-index: 10 !important;
+          background: white !important;
         }
         .unit-intel-mockup {
-          transform: scale(0.75) !important;
+          transform: scale(0.7) !important;
           transform-origin: top center !important;
-          margin: 0 auto !important;
+          margin: 20px auto 0 !important;
           order: 2 !important;
           position: relative !important;
-          z-index: 0 !important;
+          z-index: 1 !important;
           max-width: 100% !important;
         }
         .unit-steps {
@@ -2395,24 +2396,24 @@
           padding: 10px !important;
           display: block !important;
         }
-        .quality-scroll-section .solution-grid,
-        .quality-sticky-container > .solution-inner > div[style*="grid"] {
+        .quality-sticky-container .solution-inner > div {
           display: flex !important;
           flex-direction: column !important;
           gap: 30px !important;
         }
-        .quality-scroll-section .solution-content {
+        .quality-sticky-container .solution-content {
           order: 1 !important;
           position: relative !important;
-          z-index: 1 !important;
+          z-index: 10 !important;
+          background: white !important;
         }
         .qi-mockup {
-          transform: scale(0.75) !important;
+          transform: scale(0.7) !important;
           transform-origin: top center !important;
-          margin: 0 auto !important;
+          margin: 20px auto 0 !important;
           order: 2 !important;
           position: relative !important;
-          z-index: 0 !important;
+          z-index: 1 !important;
           max-width: 100% !important;
         }
         .quality-steps {
